[package]
name = "cstr_core"
version = "0.2.5"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "Implementation of CStr and CString for no_std environments."
documentation = "https://docs.rs/cstr_core/"
license = "Apache-2.0/MIT"
repository = "https://github.com/Amanieu/cstr_core"
readme = "README.md"
keywords = ["cstr", "cstring", "no_std", "string", "c"]
categories = ["data-structures", "no-std"]
edition = "2018"

[dependencies]
cty = "*"
#memchr = { version = "2.4.1", default-features = false }

[dependencies.memchr]
default-features = false
#version="*"
#version="2.4.1"
git = "https://github.com/BurntSushi/memchr.git"
rev="8e1da98fee06d66c13e66c330e3a3dd6ccf0e3a0"
#tag="2.4.1"

[features]
default = ["arc", "alloc"]
alloc = []
std = []
arc = []
nightly = []
use_libc = ["memchr/libc"]
